--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,15 @@
 ---
-const today = new Date();
+const today = new Date()
 ---
 
 <footer class="footer footer-center block mb-5 pt-10">
   <div class="pb-2">
-    &copy; {today.getFullYear()} Manuel Ernesto
+    &copy; {today.getFullYear()} Alan Gazzano
   </div>
   <div class="inline opacity-75">
     <!-- Thanks for using this template. Please keep this line to support my work :) -->
-    <a href="https://github.com/manuelernestog/astro-modern-personal-website" target="_blank" class="font-bold">Website Template</a> developed by
-    <a href="https://manuelernestog.github.io" target="_blank" class="font-bold">Manuel Ernesto ⚡️</a>
+    <a href="https://github.com/alangazzano/astro-modern-personal-website" target="_blank" class="font-bold">🚀 BUILT WTIH ASTRO</a>
+    <!-- <a href="https://alangazzano.github.io" target="_blank" class="font-bold">Alan Gazzano ⚡️</a> -->
   </div>
 </footer>
 <style>
