--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -1,11 +1,11 @@
 ---
-const { title, img, desc, url, badge, tags, target = '_blank' } = Astro.props;
+const { title, img, desc, url, badge, tags, target = '_blank' } = Astro.props
 ---
 
-<div class="rounded-lg bg-base-100 hover:shadow-xl transition ease-in-out hover:scale-[102%]">
+<div class="rounded-lg bg-base-100 hover:shadow-xl transition ease-in-out hover:scale-[102%] group">
   <a href={url} target={target}>
     <div class="hero-content flex-col md:flex-row">
-      <img src={img} alt={title} class="max-w-full md:max-w-[13rem] rounded-lg" />
+      <img src={img} alt={title} class="max-w-full md:max-w-[13rem] rounded-lg grayscale transition transform duration-300 group-hover:grayscale-0" />
       <div class="grow w-full">
         <h1 class="text-xl font-bold">
           {title}
