--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 
-const posts = (await Astro.glob("./blog/*.{md,mdx}")).sort(
+const posts = (await Astro.glob("./portfolio/*.{md,mdx}")).sort(
   (a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf()
 );
 
@@ -13,20 +13,19 @@ const last_posts = posts.slice(0, 3);
 
     <div class="pb-12 mt-5">
       <div class="text-xl py-1">Hey there 👋</div>
-      <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-      <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
+      <div class="text-5xl font-bold">I'm Alan Gazzano</div>
+      <div class="text-3xl py-3 font-bold">Spanish language translator based in Japan</div>
       <div class="py-2">
         <text class="text-lg">
-          I made this template for everyone who needs to create a personal website easily and quickly. This template includes Project Section, CV Section, Store, Paginated Blog, RSS Feed, SEO Friendly, Responsive Desing and 29 Visual themes. I hope you find it useful!
+          Detail-oriented professional with a Master's Degree in Education from Yokohama National University
           </text
         >
       </div>
       <div class="mt-8">
-        <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-        <a href="https://github.com/manuelernestog/astro-modern-personal-website" target="_blank" class="btn btn-outline ml-5"> Get This template</a>
+        <a class="btn" href="https://twitter.com/alangazzano" target="_blank"> Let's connect!</a>
       </div>
     </div>
-
+<!-- 
     <div>
       <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
     </div>
@@ -52,24 +51,32 @@ const last_posts = posts.slice(0, 3);
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
     badge="FOSS"
-  />
+  /> -->
 
 
     <div>
-      <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
+      <div class="text-3xl w-full font-bold mb-5 mt-10">Check some of my work</div>
     </div>
 
     {
-      last_posts.map((post) => (
-        <HorizontalCard
+      last_posts.map((post, index) => {
+        if (index > 3) return
+        return (
+          <HorizontalCard
           title={post.frontmatter.title}
           img={post.frontmatter.heroImage}
           desc={post.frontmatter.description}
           url={post.url}
+          tags={post.frontmatter.tags}
           target="_self"
         />
         <div class="divider my-0"></div>
-      ))
+        )
+      })
     }
+<div class="text-xl w-full text-center font-bold mb-5 mt-1">
+<a href="/portfolio/1" class=" hover:text-gray-500">See More</a>
+</div>
+
 
 </BaseLayout>
