--- a/src/pages/portfolio/[page].astro
+++ b/src/pages/portfolio/[page].astro
@@ -6,13 +6,13 @@ export async function getStaticPaths({ paginate }) {
   const posts = (await Astro.glob("./*.{md,mdx}")).sort(
     (a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf()
   );
-
+  console.log('tags', posts)
   return paginate(posts, { pageSize: 10 });
 }
 const { page } = Astro.props;
 ---
 
-<BaseLayout title = "Blog">
+<BaseLayout title = "Portfolio">
   <ul>
     <!--List the array of astronaut info-->
     {page.data.map(( post ) => (
@@ -21,6 +21,7 @@ const { page } = Astro.props;
         img={post.frontmatter.heroImage}
         desc={post.frontmatter.description}
         url={post.url}
+        tags={post.frontmatter.tags}
 		target="_self"
       />
 	  <div class="divider my-0"></div>
