--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ const posts = (await Astro.glob("./portfolio/*.{md,mdx}")).sort(
 );
 
 const last_posts = posts.slice(0, 3);
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 ---
 
 <BaseLayout>
@@ -25,7 +26,7 @@ const last_posts = posts.slice(0, 3);
         <a class="btn" href="https://twitter.com/alangazzano" target="_blank"> Let's connect!</a>
       </div>
     </div>
-<!-- 
+<!--
     <div>
       <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
     </div>
@@ -80,3 +81,20 @@ const last_posts = posts.slice(0, 3);
 
 
 </BaseLayout>
+
+<script>
+  declare global {
+    interface Window {
+      netlifyIdentity: any;
+    }
+  }
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user: any => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
