--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,6 +13,7 @@ const { image, title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.prop
 <html lang="en" data-theme="autumn">
   <head>
     <BaseHead title={title} description={description} image={image} />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
   <body>
     <div class="bg-base-100 drawer drawer-mobile">
@@ -28,5 +29,22 @@ const { image, title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.prop
       </div>
       <SideBar />
     </div>
+    <script>
+      declare global {
+        interface Window {
+          netlifyIdentity: any;
+        }
+      }
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user: any => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
+
   </body>
 </html>
