--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ export interface Props {
   content: {
     title: string
     description: string
-    pubDate?: string
+    customer?: string
     updatedDate?: string
     heroImage?: string
   }
