--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 
 const posts = (await Astro.glob("./portfolio/*.{md,mdx}")).sort(
-  (a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf()
+  (a, b) => new Date(b.frontmatter.customer).valueOf() - new Date(a.frontmatter.customer).valueOf()
 );
 
 const last_posts = posts.slice(0, 3);
