--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,15 +1,15 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
-import '../styles/global.css';
+import '../styles/global.css'
 
 export interface Props {
-	title: string;
-	description: string;
-	image?: string;
+  title: string
+  description: string
+  image?: string
 }
 
-const { title, description, image = '/alan.jpg' } = Astro.props;
+const { title, description, image = '/alan.jpg' } = Astro.props
 ---
 
 <!-- Global Metadata -->
@@ -22,6 +22,8 @@ const { title, description, image = '/alan.jpg' } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="robots" content="noindex" />
+<meta name="googlebot" content="noindex" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
