--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const posts = (await Astro.glob("./portfolio/*.{md,mdx}")).sort(
 const last_posts = posts.slice(0, 3);
 ---
 
-<BaseLayout>
+<BaseLayout title="Portfolio">
 
     <div class="pb-12 mt-5">
       <div class="text-xl py-1">Hey there 👋</div>
