--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,7 @@ const { image, title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.prop
 <!DOCTYPE html>
 <html lang="en" data-theme="autumn">
   <head>
-    <BaseHead title={title} description={description} image={image} />
+    <BaseHead title={`${SITE_TITLE} | ${title}`} description={description} image={image} />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
   <body>
