--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -17,7 +17,7 @@ const {
 } = Astro.props
 ---
 
-<BaseLayout title={title} description={description} image={heroImage}>
+<BaseLayout title={`Project: ${title}`} description={description} image={heroImage}>
   <main class="md:flex md:justify-center">
     <article class="prose prose-lg max-w-[750px] prose-img:mx-auto">
       {heroImage && <img src={heroImage} alt={title} class="w-full mb-6" />}
