--- a/src/pages/portfolio/[page].astro
+++ b/src/pages/portfolio/[page].astro
@@ -12,7 +12,7 @@ export async function getStaticPaths({ paginate }) {
 const { page } = Astro.props;
 ---
 
-<BaseLayout title = "Portfolio">
+<BaseLayout title = "Projects">
   <ul>
     <!--List the array of astronaut info-->
     {page.data.map(( post ) => (
