--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,15 +14,15 @@ const last_posts = posts.slice(0, 3);
     <div class="pb-12 mt-5">
       <div class="text-xl py-1">Hey there 👋</div>
       <div class="text-5xl font-bold">I'm Alan Gazzano</div>
-      <div class="text-3xl py-3 font-bold">Spanish language translator based in Japan</div>
+      <div class="text-3xl py-3 font-bold">Translator and project manager based in Japan</div>
       <div class="py-2">
         <text class="text-lg">
-          Detail-oriented professional with a Master's Degree in Education from Yokohama National University
+          Detail-oriented professional with IT skills and a passion for global communication
           </text
         >
       </div>
       <div class="mt-8">
-        <a class="btn" href="https://twitter.com/alangazzano" target="_blank"> Let's connect!</a>
+        <a class="btn" href="mailto:alangazzano@gmail.com" target="_blank"> Let's connect!</a>
       </div>
     </div>
 <!--
