--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const last_posts = posts.slice(0, 3);
     <div class="pb-12 mt-5">
       <div class="text-xl py-1">Hey there 👋</div>
       <div class="text-5xl font-bold">I'm Alan Gazzano</div>
-      <div class="text-3xl py-3 font-bold">Translator and project manager based in Japan</div>
+      <div class="text-3xl py-3 font-bold">Translator and software localizer based in Japan</div>
       <div class="py-2">
         <text class="text-lg">
           Detail-oriented professional with IT skills and a passion for global communication
