--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ const heroImage = '/alan.jpg'
       <li>Member of the Japan Translation Federation (JTF)</li>
       <li>Over ten years of experience in cross-language communication services, with top quality reviews and references available online</li>   
       <li>Master's Degree in Education from Yokohama National University</li>
-      <li>Certified translator in Japanese to Spanish (TQE), and Japanese to English (Business & Technical, JTF)</li>
+      <li>Certified translator in Japanese to Spanish (TQE) and Japanese to English (Business & Technical, JTF)</li>
       <li>RWS Certification in Trados Studio 2021 for Project Managers</li>
       <li>Translation, localization and editing for customers in Argentina and Japan, as well as international corporations, with top quality ratings</li>
       <li>Subtitling and proofreading for outsourcers in Tokyo on a weekly basis, along with project management assistance</li>
@@ -23,7 +23,7 @@ const heroImage = '/alan.jpg'
       <li>Trados Studio 2021 and other software tools for accuracy and speed in a cost-effective way</li>
       <li>End-clients including some of the world's top technology companies, app developers, web media, Japanese electronics giants and institutions from several countries</li>
     </ul>
-
+    <div class="divider my-2"></div>
     <p>
 アルゼンチン生まれ、同国国立芸術大学卒業。翻訳歴10年、日本翻訳連盟（JTF）会員。</br>
 ブエノスアイレス市立音楽院にて研究員・翻訳担当を経て、2017年に日本大使館の推薦で来日。横浜国立大学大学院 教育学研究科（修士）修了。また、翻訳実務検定（1級）に合格し、SDL Trados Studioおよびプロジェクトマネージャー認定を取得。</br>
