--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ const heroImage = '/alan.jpg'
 
     <div class="divider my-2"></div>
      <ul>
-      <li>Born in Buenos Aires in 1989 and resident in Japan since 2017</li>
+      <li>Born in Buenos Aires, Argentina in 1989 and resident in Japan since 2017</li>
       <li>Member of the Japan Translation Federation (JTF)</li>
       <li>Over ten years of experience in cross-language communication services, with top quality reviews and references available online</li>   
       <li>Master's Degree in Education from Yokohama National University</li>
