--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ const heroImage = '/alan.jpg'
 
 <BaseLayout title="About Me">
   <article class="prose prose-lg max-w-[750px] prose-img:mx-auto">
-    {heroImage && <img src={heroImage} alt="Me" class="w-full mb-6" />}
+    {heroImage && <img src={heroImage} alt="Me" class="w-full mb-6 h-[24rem] object-cover object-top" />}
     <h1 class="title my-2 text-4xl font-bold">Alan Gazzano</h1>
 
     <div class="divider my-2"></div>
