add ProZ sidebar

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -36,8 +36,8 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: currentColor;transform: ;msFilter:;"><circle cx="4.983" cy="5.009" r="2.188"></circle><path d="M9.237 8.855v12.139h3.769v-6.003c0-1.584.298-3.118 2.262-3.118 1.937 0 1.961 1.811 1.961 3.218v5.904H21v-6.657c0-3.27-.704-5.783-4.526-5.783-1.835 0-3.065 1.007-3.568 1.96h-.051v-1.66H9.237zm-6.142 0H6.87v12.139H3.095z"></path></svg>
       </a>
 
-      <a href="/rss.xml" target="_blank" class="mx-3" aria-label="RSS Feed">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: currentColor;transform: ;msFilter:;"><path d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"></path><path d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"></path><circle cx="6" cy="18" r="2"></circle></svg>
+      <a href="https://www.proz.com/profile/1927216" target="_blank" class="mx-3" aria-label="ProZ">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: currentColor;transform: ;msFilter:;"><path fill="currentColor" d="M2 7.25A3.25 3.25 0 0 1 5.25 4h13.5A3.25 3.25 0 0 1 22 7.25v7.25c0-1.19-.593-2.24-1.5-2.873V7.25a1.75 1.75 0 0 0-1.75-1.75H5.25A1.75 1.75 0 0 0 3.5 7.25v9.5c0 .966.784 1.75 1.75 1.75h8.058A2.76 2.76 0 0 0 13 19.772v.103c0 .042 0 .083.002.125H5.25A3.25 3.25 0 0 1 2 16.75v-9.5ZM18.5 17a2.5 2.5 0 1 0 0-5a2.5 2.5 0 0 0 0 5Zm0 6c3.214 0 4.5-1.569 4.5-3.125v-.103c0-.979-.794-1.772-1.773-1.772h-5.454c-.98 0-1.773.793-1.773 1.772v.103C14 21.437 15.286 23 18.5 23ZM7.75 8a.75.75 0 0 0-.75.75v6.5a.75.75 0 0 0 1.5 0V13.5h1.25a2.75 2.75 0 1 0 0-5.5h-2Zm2 4H8.5V9.5h1.25a1.25 1.25 0 1 1 0 2.5Z"/></svg>
       </a>
     </div>
   </div>
