edit images sidebar

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,8 +8,8 @@ const today = new Date()
   </div>
   <div class="inline opacity-75">
     <!-- Thanks for using this template. Please keep this line to support my work :) -->
-    <a href="https://github.com/alangazzano/astro-modern-personal-website" target="_blank" class="font-bold">🚀 BUILT WTIH ASTRO</a>
-    <!-- <a href="https://alangazzano.github.io" target="_blank" class="font-bold">Alan Gazzano ⚡️</a> -->
+    <a href="https://github.com/alangazzano" target="_blank" class="font-bold">🚀 BUILT WITH ASTRO</a>
+    <!-- <a href="https://github.com/alangazzano" target="_blank" class="font-bold">Alan Gazzano ⚡️</a> -->
   </div>
 </footer>
 <style>
