--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -5,7 +5,7 @@
       <a href="/">
         <div class="avatar transition ease-in-out w-1/2 hover:scale-[102%] block m-auto mt-3 mb-6">
           <div>
-            <img class="mask mask-circle" src="/profile.jpg" alt="profile image" />
+            <img class="mask mask-circle" src="/alan3.jpg" alt="profile image" />
           </div>
         </div>
       </a>
@@ -15,7 +15,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="/about">About Me</a></li>
       <li><a href="/portfolio/1">Portfolio</a></li>
-      <li><a href="mailto:contact.alangazzano@hotmail.com">Contact</a></li>
+      <li><a href="mailto:alangazzano@gmail.com">Contact</a></li>
     </ul>
     <div class="grow"></div>
     <div class="social-icons px-4 my-2 flex self-center">
