Change tags and fix problems

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,7 +10,7 @@ const { image, title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.prop
 ---
 
 <!DOCTYPE html>
-<html lang="en" data-theme="autumn">
+<html lang="en" data-theme="garden">
   <head>
     <BaseHead title={`${SITE_TITLE} | ${title}`} description={description} image={image} />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
