--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,10 +10,10 @@ const heroImage = '/alan.jpg'
     <h1 class="title my-2 text-4xl font-bold">Alan Gazzano</h1>
 
     <div class="divider my-2"></div>
-     <ul>
+    <ul>
       <li>Born in Buenos Aires, Argentina in 1989 and resident in Japan since 2017</li>
       <li>Member of the Japan Translation Federation (JTF)</li>
-      <li>Over ten years of experience in cross-language communication services, with top quality reviews and references available online</li>   
+      <li>Over ten years of experience in cross-language communication services, with top quality reviews and references available online</li>
       <li>Master's Degree in Education from Yokohama National University</li>
       <li>Certified translator in Japanese to Spanish (TQE) and Japanese to English (Business & Technical, JTF)</li>
       <li>RWS Certification in Trados Studio 2021 for Project Managers</li>
@@ -24,11 +24,9 @@ const heroImage = '/alan.jpg'
       <li>End-clients including some of the world's top technology companies, app developers, web media, Japanese electronics giants and institutions from several countries</li>
     </ul>
     <div class="divider my-2"></div>
-    <p>
-アルゼンチン生まれ、同国国立芸術大学卒業。翻訳歴10年、日本翻訳連盟（JTF）会員。</br>
-ブエノスアイレス市立音楽院にて研究員・翻訳担当を経て、2017年に日本大使館の推薦で来日。横浜国立大学大学院 教育学研究科（修士）修了。また、翻訳実務検定（1級）に合格し、SDL Trados Studioおよびプロジェクトマネージャー認定を取得。</br>
-東京を拠点として、IT・メディア・観光・貿易・教育といった分野において翻訳・校正・ローカライゼーション業務に携わり、一貫して高品質の評価を得ている。さらに、複数の翻訳会社にて、ネイティブチェック・映像翻訳・ナレーション作業。</br>
-常にこの業界の最新動向に応じて、プログラミングやCATツール活用等、ITスキルを磨き続ける。
-    </p>
+    <p>アルゼンチン生まれ、同国国立芸術大学卒業。翻訳歴10年、日本翻訳連盟（JTF）会員。</p>
+    <p>ブエノスアイレス市立音楽院にて研究員・翻訳担当を経て、2017年に日本大使館の推薦で来日。横浜国立大学大学院 教育学研究科（修士）修了。また、翻訳実務検定（1級）に合格し、SDL Trados Studioおよびプロジェクトマネージャー認定を取得。</p>
+    <p>東京を拠点として、IT・メディア・観光・貿易・教育といった分野において翻訳・校正・ローカライゼーション業務に携わり、一貫して高品質の評価を得ている。さらに、複数の翻訳会社にて、ネイティブチェック・映像翻訳・ナレーション作業。</p>
+    <p>常にこの業界の最新動向に応じて、プログラミングやCATツール活用等、ITスキルを磨き続ける。</p>
   </article>
 </BaseLayout>
