--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,34 +25,6 @@ const last_posts = posts.slice(0, 3);
         <a class="btn" href="mailto:alangazzano@gmail.com" target="_blank"> Let's connect!</a>
       </div>
     </div>
-<!--
-    <div>
-      <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
-    </div>
-
-    <HorizontalCard
-      title="Demo Project 1"
-      img="/post_img.webp"
-      desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      url="#"
-      badge="NEW"
-    />
-    <div class="divider my-0"></div>
-    <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-  />
-    <div class="divider my-0"></div>
-    <HorizontalCard
-    title="Demo Project 3"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-    badge="FOSS"
-  /> -->
-
 
     <div>
       <div class="text-3xl w-full font-bold mb-5 mt-10">Check some of my work</div>
@@ -74,8 +46,8 @@ const last_posts = posts.slice(0, 3);
         )
       })
     }
-<div class="text-xl w-full text-center font-bold mb-5 mt-1">
-<a href="/portfolio/1" class=" hover:text-gray-500">See More</a>
+<div class="w-full text-center font-bold mb-5 mt-4">
+  <a href="/portfolio/1" class="btn">See More</a>
 </div>
 </BaseLayout>
 
