--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,9 +18,9 @@ const heroImage = '/alan.jpg'
       <li>Certified translator in Japanese to Spanish (TQE) and Japanese to English (Business & Technical, JTF)</li>
       <li>RWS Certification in Trados Studio 2021 for Project Managers</li>
       <li>Translation, localization and editing for customers in Argentina and Japan, as well as international corporations, with top quality ratings</li>
-      <li>Subtitling and proofreading for outsourcers in Tokyo on a weekly basis, along with project management assistance</li>
+      <li>Subtitling and proofreading for outsourcers in Tokyo on a weekly basis, along with project management assistance in all phases of the translation process</li>
       <li>Voiceover and text-to-speech projects with programming interfaces</li>
-      <li>Trados Studio 2021 and other software tools for accuracy and speed in a cost-effective way</li>
+      <li>SDL Trados Studio 2021 and other software tools for accuracy and speed in a cost-effective way</li>
       <li>End-clients including some of the world's top technology companies, app developers, web media, Japanese electronics giants and institutions from several countries</li>
     </ul>
     <div class="divider my-2"></div>
