--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,10 +25,10 @@ const heroImage = '/alan.jpg'
     </ul>
     <div class="divider my-2"></div>
     <p>
-アルゼンチン生まれ、同国国立芸術大学卒業。翻訳歴10年、日本翻訳連盟（JTF）会員。</br>
-ブエノスアイレス市立音楽院にて研究員・翻訳担当を経て、2017年に日本大使館の推薦で来日。横浜国立大学大学院 教育学研究科（修士）修了。また、翻訳実務検定（1級）に合格し、SDL Trados Studioおよびプロジェクトマネージャー認定を取得。</br>
-東京を拠点として、IT・メディア・観光・貿易・教育といった分野において翻訳・校正・ローカライゼーション業務に携わり、一貫して高品質の評価を得ている。さらに、複数の翻訳会社にて、ネイティブチェック・映像翻訳・ナレーション作業。</br>
-常にこの業界の最新動向に応じて、プログラミングやCATツール活用等、ITスキルを磨き続ける。
+アルゼンチン生まれ、同国国立芸術大学卒業。翻訳歴10年以上、日本翻訳連盟（JTF）会員。</br>
+ブエノスアイレス市立音楽院にて研究員・翻訳担当を経て、2017年に日本大使館の推薦で来日。横浜国立大学大学院 教育学研究科（修士）修了。スペイン語翻訳実務検定1級およびJTF日英翻訳検定2級。</br>
+東京を拠点として、IT・メディア・観光・貿易・教育といった分野において翻訳・校正・ローカライゼーション業務に携わり、一貫して高品質の評価を得ている。さらに、ネイティブチェック・映像翻訳（字幕作成）・ナレーション作業。</br>
+常にこの業界の最新動向に応じて、プログラミングやCATツール活用等、ITスキルを磨き続けている。
     </p>
   </article>
 </BaseLayout>
